--- a/UnitTests/CMakeLists.txt
+++ b/UnitTests/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 
 project(GameworkFramework)
 
+find_package(SFML 2.5 COMPONENTS graphics audio window system network REQUIRED)
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
 
 add_executable(
@@ -11,4 +13,4 @@ add_executable(
 	miscellaneous_test.cpp
 )
 
-target_link_libraries(Main.out)
+target_link_libraries(Main.out sfml-graphics sfml-audio)
